--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,9 +1,33 @@
-name = "cf-worker-ws-dev" # todo
+name = "one" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
+[[routes]]
+pattern = "one.rin.biz.id"
+custom_domain = true
+[[routes]]
+pattern = "cvs-deo.shopeemobile.com.one.rin.biz.id"
+custom_domain = true
+[[routes]]
+pattern = "cf.shopee.co.id.one.rin.biz.id"
+custom_domain = true
+[[routes]]
+pattern = "shopee.co.id.one.rin.biz.id"
+custom_domain = true
+[[routes]]
+pattern = "cv.shopee.sg.one.rin.biz.id"
+custom_domain = true
+[[routes]]
+pattern = "quiz.int.vidio.com.one.rin.biz.id"
+custom_domain = true
+[[routes]]
+pattern = "quiz.staging.vidio.com.one.rin.biz.id"
+custom_domain = true
+[[routes]]
+pattern = "img.email3.vidio.com.one.rin.biz.id"
+custom_domain = true
 
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
@@ -12,4 +36,4 @@ compatibility_date = "2023-05-26"
 # NODE_ID = "1"
 # API_TOKEN = "example_dev_token"
 # API_HOST = "api.v2board.com"
-UUID = "1b6c1745-992e-4aac-8685-266c090e50ea,89b64978-6244-4bf3-bf64-67ade4ce5c8f,d342d11e-d424-4583-b36e-524ab1f0afa4"
+UUID = "77ee00b0-addc-4ea0-9e58-fe95d155969f"
