--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "sglinode" # todo
+name = "sg-alibaba" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "linode.ayubisanz.filegear-sg.me"
+pattern = "alibaba.ayubisanz.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.linode.ayubisanz.filegear-sg.me"
+pattern = "shopee.co.id.alibaba.ayubisanz.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.linode.ayubisanz.filegear-sg.me"
+pattern = "cf.shopee.co.id.alibaba.ayubisanz.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cv.shopee.sg.linode.ayubisanz.filegear-sg.me"
+pattern = "cv.shopee.sg.alibaba.ayubisanz.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.linode.ayubisanz.filegear-sg.me"
+pattern = "cvs-deo.shopeemobile.com.alibaba.ayubisanz.filegear-sg.me"
 custom_domain = true
 
 [vars]
