--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,32 +1,11 @@
-name = "one" # todo
+name = "id1" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "one.rin.biz.id"
-custom_domain = true
-[[routes]]
-pattern = "cvs-deo.shopeemobile.com.one.rin.biz.id"
-custom_domain = true
-[[routes]]
-pattern = "cf.shopee.co.id.one.rin.biz.id"
-custom_domain = true
-[[routes]]
-pattern = "shopee.co.id.one.rin.biz.id"
-custom_domain = true
-[[routes]]
-pattern = "cv.shopee.sg.one.rin.biz.id"
-custom_domain = true
-[[routes]]
-pattern = "quiz.int.vidio.com.one.rin.biz.id"
-custom_domain = true
-[[routes]]
-pattern = "quiz.staging.vidio.com.one.rin.biz.id"
-custom_domain = true
-[[routes]]
-pattern = "img.email3.vidio.com.one.rin.biz.id"
+pattern = "id1.rin.biz.id"
 custom_domain = true
 
 [vars]
