--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,6 +7,27 @@ compatibility_date = "2023-05-26"
 [[routes]]
 pattern = "id1.rin.biz.id"
 custom_domain = true
+[[routes]]
+pattern = "cvs-deo.shopeemobile.com.id1.rin.biz.id"
+custom_domain = true
+[[routes]]
+pattern = "cf.shopee.co.id.id1.rin.biz.id"
+custom_domain = true
+[[routes]]
+pattern = "shopee.co.id.id1.rin.biz.id"
+custom_domain = true
+[[routes]]
+pattern = "cv.shopee.sg.id1.rin.biz.id"
+custom_domain = true
+[[routes]]
+pattern = "quiz.int.vidio.com.id1.rin.biz.id"
+custom_domain = true
+[[routes]]
+pattern = "quiz.staging.vidio.com.id1.rin.biz.id"
+custom_domain = true
+[[routes]]
+pattern = "img.email3.vidio.com.id1.rin.biz.id"
+custom_domain = true
 
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
