--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,14 +1,14 @@
-name = "indo" # todo
+name = "104.18.16.230" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "englishtest-stage-7.duolingo.com.bjhonstore.filegear-sg.me"
+pattern = "englishtest-stage-7.duolingo.com.kozelvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "englishtest-stage-7.duolingo.com.bjhonstore.filegear-sg.me"
+pattern = "englishtest-stage-7.duolingo.com.kozelvpn.filegear-sg.me"
 custom_domain = true
 
 [vars]
@@ -18,4 +18,4 @@ custom_domain = true
 # NODE_ID = "1"
 # API_TOKEN = "example_dev_token"
 # API_HOST = "api.v2board.com"
-UUID = "8a11cdcc-e455-4fe9-8919-223dc9165c99"
+UUID = "42e8bb5e-83be-4d50-b6a7-016fb33509f0"
