--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,19 +5,19 @@ name = "indo" # todo
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "bjhonnstore.filegear-sg.me"
+pattern = "indo.bjhonnstore.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.bjhonnstore.filegear-sg.me"
+pattern = "shopee.co.id.indo.bjhonnstore.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.bjhonnstore.filegear-sg.me"
+pattern = "cf.shopee.co.id.indo.bjhonnstore.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cv.shopee.sg.bjhonnstore.filegear-sg.me"
+pattern = "cv.shopee.sg.indo.bjhonnstore.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.bjhonnstore.filegear-sg.me"
+pattern = "cvs-deo.shopeemobile.com.indo.bjhonnstore.filegear-sg.me"
 custom_domain = true
 
 [vars]
