--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,14 +1,14 @@
-name = "104.18.16.230" # todo
+name = "indo" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "englishtest-stage-7.duolingo.com.kozelvpn.filegear-sg.me"
+pattern = "support.duolingo.com.kozelvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "englishtest-stage-7.duolingo.com.kozelvpn.filegear-sg.me"
+pattern = "support .com.kozelvpn.filegear-sg.me"
 custom_domain = true
 
 [vars]
