--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "thailand" # todo
+name = "id-gllc" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
@@ -6,22 +6,19 @@ main = "_worker.js"
 compatibility_date = "2023-05-26"
 
 [[routes]]
-pattern = "thailand.ershavpn.filegear-sg.me"
+pattern = "id-gllc.ershavpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.sea-sw.swiftserve.com.thailand.ershavpn.filegear-sg.me"
+pattern = "shopee.co.id.id-gllc.ershavpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.thailand.ershavpn.filegear-sg.me"
+pattern = "cf.shopee.co.id.id-gllc.ershavpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.thailand.ershavpn.filegear-sg.me"
+pattern = "cv.shopee.sg.id-gllc.ershavpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cv.shopee.sg.thailand.ershavpn.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "cvs-deo.shopeemobile.com.thailand.ershavpn.filegear-sg.me"
+pattern = "cvs-deo.shopeemobile.com.id-gllc.ershavpn.filegear-sg.me"
 custom_domain = true
 
 [vars]
