--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,11 +1,65 @@
-name = "sg7" # todo
+name = "id11" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "sg7.rin.biz.id"
+pattern = "id11.kyrie.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "cvs-deo.shopeemobile.com.id11.kyrie.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "cf.shopee.co.id.id11.kyrie.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "shopee.co.id.id11.kyrie.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "cv.shopee.sg.id11.kyrie.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "quiz.int.vidio.com.id11.kyrie.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "quiz.staging.vidio.com.id11.kyrie.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "img.email3.vidio.com.id11.kyrie.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "edu.ruangguru.com.id11.kyrie.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "marketing.ruangguru.com.id11.kyrie.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "onelink.seabank.co.id.id11.kyrie.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "cdn.i-joox.com.id11.kyrie.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "app.gopay.co.id.id11.kyrie.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "app.genflix.co.id.id11.kyrie.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "web.joox.com.id11.kyrie.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "dev-cdn.i-joox.com.id11.kyrie.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "support.duolingo.com.id11.kyrie.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "www.webex.com.id11.kyrie.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "beta.zoom.us.id11.kyrie.filegear-sg.me"
 custom_domain = true
 
 [vars]
