--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,65 +1,65 @@
-name = "id11" # todo
+name = "sg11" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "id11.kyrie.filegear-sg.me"
+pattern = "sg11.kyrie.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.id11.kyrie.filegear-sg.me"
+pattern = "cvs-deo.shopeemobile.com.sg11.kyrie.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.id11.kyrie.filegear-sg.me"
+pattern = "cf.shopee.co.id.sg11.kyrie.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.id11.kyrie.filegear-sg.me"
+pattern = "shopee.co.id.sg11.kyrie.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cv.shopee.sg.id11.kyrie.filegear-sg.me"
+pattern = "cv.shopee.sg.sg11.kyrie.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "quiz.int.vidio.com.id11.kyrie.filegear-sg.me"
+pattern = "quiz.int.vidio.com.sg11.kyrie.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "quiz.staging.vidio.com.id11.kyrie.filegear-sg.me"
+pattern = "quiz.staging.vidio.com.sg11.kyrie.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "img.email3.vidio.com.id11.kyrie.filegear-sg.me"
+pattern = "img.email3.vidio.com.sg11.kyrie.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "edu.ruangguru.com.id11.kyrie.filegear-sg.me"
+pattern = "edu.ruangguru.com.sg11.kyrie.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "marketing.ruangguru.com.id11.kyrie.filegear-sg.me"
+pattern = "marketing.ruangguru.com.sg11.kyrie.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "onelink.seabank.co.id.id11.kyrie.filegear-sg.me"
+pattern = "onelink.seabank.co.id.sg11.kyrie.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cdn.i-joox.com.id11.kyrie.filegear-sg.me"
+pattern = "cdn.i-joox.com.sg11.kyrie.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "app.gopay.co.id.id11.kyrie.filegear-sg.me"
+pattern = "app.gopay.co.id.sg11.kyrie.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "app.genflix.co.id.id11.kyrie.filegear-sg.me"
+pattern = "app.genflix.co.id.sg11.kyrie.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "web.joox.com.id11.kyrie.filegear-sg.me"
+pattern = "web.joox.com.sg11.kyrie.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "dev-cdn.i-joox.com.id11.kyrie.filegear-sg.me"
+pattern = "dev-cdn.i-joox.com.sg11.kyrie.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "support.duolingo.com.id11.kyrie.filegear-sg.me"
+pattern = "support.duolingo.com.sg11.kyrie.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "www.webex.com.id11.kyrie.filegear-sg.me"
+pattern = "www.webex.com.sg11.kyrie.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "beta.zoom.us.id11.kyrie.filegear-sg.me"
+pattern = "beta.zoom.us.sg11.kyrie.filegear-sg.me"
 custom_domain = true
 
 [vars]
