--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,32 +5,20 @@ name = "indo" # todo
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "indo.kozelvpn.filegear-sg.me"
+pattern = "kozelvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "englishtest-stage-7.duolingo.com.kozelvpn.indo.filegear-sg.me"
+pattern = "englishtest-stage-7.duolingo.com.kozelvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "englishtest-stage-7.duolingo.com.kozelvpn.indo.filegear-sg.me"
+pattern = "englishtest-stage-7.duolingo.com.kozelvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "englishtest-stage-7.duolingo.com.kozelvpn.indo.filegear-sg.me"
+pattern = "englishtest-stage-7.duolingo.com.kozelvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "englishtest-stage-7.duolingo.com.kozelvpn.indo.filegear-sg.me"
+pattern = "englishtest-stage-7.duolingo.com.kozelvpn.filegear-sg.me"
 custom_domain = true
-[[routes]]
-pattern = "englishtest-stage-7.duolingo.com.kozelvpn.indo.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "englishtest-stage-7.duolingo.com.kozelvpn.indo.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "englishtest-stage-7.duolingo.com.indo.kozelvpn.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "englishtest-stage-7.duolingo.com.indo.kozelvpn.filegear-sg.me"
-
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
 # PROXYIP = "1.2.3.4"
