--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,9 +1,36 @@
-name = "cf-worker-ws-dev" # todo
+name = "indo" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
+
 compatibility_date = "2023-05-26"
+[[routes]]
+pattern = "indo.bjhonvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "shopee.co.id.indo.bjhonvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "edu.ruangguru.com.indo.bjhonvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "gomarketplacefront-cf.zoom.us.indo.bjhonvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "blog.sushiroll.co.id.indo.bjhonvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "acces.iflix.com.indo.bjhonvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "englishtest-stage-7.duolingo.com.indo.bjhonvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "ruangguru.com.indo.bjhonvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "cvs-deo.shopeemobile.com.indo.bjhonvpn.filegear-sg.me"
 
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
