--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,20 +1,20 @@
-name = "sg" # todo
+name = "sgovh" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "reinzvpn.filegear-sg.me"
+pattern = "ovh.reinzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.reinzvpn.filegear-sg.me"
+pattern = "shopee.co.id.ovh.reinzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.reinzvpn.filegear-sg.me"
+pattern = "cf.shopee.co.id.ovh.reinzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.reinzvpn.filegear-sg.me"
+pattern = "cvs-deo.shopeemobile.com.ovh.reinzvpn.filegear-sg.me"
 custom_domain = true
 
 [vars]
