--- a/wrangler.toml
+++ b/wrangler.toml
@@ -8,14 +8,12 @@ compatibility_date = "2023-05-26"
 pattern = "ovh.reinzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.ovh.reinzvpn.filegear-sg.me"
+pattern = "teams.microsoft.com.ovh.reinzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.ovh.reinzvpn.filegear-sg.me"
+pattern = "meetings.googleapis.com.ovh.reinzvpn.filegear-sg.me"
 custom_domain = true
-[[routes]]
-pattern = "cvs-deo.shopeemobile.com.ovh.reinzvpn.filegear-sg.me"
-custom_domain = true
+
 
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
