--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,24 +1,25 @@
-name = "indo" # todo
+name = "sgdo" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "kozelvpn.filegear-sg.me"
+pattern = "sgdo.kozelvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "englishtest-stage-7.duolingo.com.kozelvpn.filegear-sg.me"
+pattern = "englishtest-stage-7.duolingo.com.sgdo.kozelvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "englishtest-stage-7.duolingo.com.kozelvpn.filegear-sg.me"
+pattern = "englishtest-stage-7.duolingo.com.sgdo.kozelvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "englishtest-stage-7.duolingo.com.kozelvpn.filegear-sg.me"
+pattern = "englishtest-stage-7.duolingo.com.sgdo.kozelvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "englishtest-stage-7.duolingo.com.kozelvpn.filegear-sg.me"
+pattern = "englishtest-stage-7.duolingo.com.sgdo.kozelvpn.filegear-sg.me"
 custom_domain = true
+
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
 # PROXYIP = "1.2.3.4"
