--- a/wrangler.toml
+++ b/wrangler.toml
@@ -12,16 +12,10 @@ custom_domain = true
 pattern = "shopee.co.id.indo.bjhonvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "edu.ruangguru.com.indo.bjhonvpn.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "gomarketplacefront-cf.zoom.us.indo.bjhonvpn.filegear-sg.me"
+pattern = "www.ruangguru.com.indo.bjhonvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
 pattern = "blog.sushiroll.co.id.indo.bjhonvpn.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "acces.iflix.com.indo.bjhonvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
 pattern = "englishtest-stage-7.duolingo.com.indo.bjhonvpn.filegear-sg.me"
@@ -29,8 +23,6 @@ custom_domain = true
 [[routes]]
 pattern = "ruangguru.com.indo.bjhonvpn.filegear-sg.me"
 custom_domain = true
-[[routes]]
-pattern = "cvs-deo.shopeemobile.com.indo.bjhonvpn.filegear-sg.me"
 
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
