--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "sglinode" # todo
+name = "alibaba" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "sglinode.kozelvpn.filegear-sg.me"
+pattern = "alibaba.kozelvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "englishtest-stage-7.duolingo.com.sglinode.kozelvpn.filegear-sg.me"
+pattern = "support.duolingo.com.alibaba.kozelvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "englishtest-stage-7.duolingo.com.sglinode.kozelvpn.filegear-sg.me"
+pattern = "support.duolingo.com.alibaba.kozelvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "englishtest-stage-7.duolingo.com.sglinode.kozelvpn.filegear-sg.me"
+pattern = "support.duolingo.com.alobaba.kozelvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "englishtest-stage-7.duolingo.com.sglinode.kozelvpn.filegear-sg.me"
+pattern = "support.duolingo.com.alibaba.kozelvpn.filegear-sg.me"
 custom_domain = true
 
 [vars]
