--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,18 +1,49 @@
-name = "vultr" # todo
+name = "HK" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "vultr.reinzvpn.filegear-sg.me"
+pattern = "hk.reinzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "teams.microsoft.com.vultr.reinzvpn.filegear-sg.me"
+pattern = "teams.microsoft.com.hk.reinzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "meetings.googleapis.com.vultr.reinzvpn.filegear-sg.me"
+pattern = "meetings.googleapis.com.hk.reinzvpn.filegear-sg.me"
 custom_domain = true
+[[routes]]
+pattern = "zoomcares.zoom.us.hk.reinzvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "maps.gstatic.com.hk.reinzvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "edge.skype.com.hk.reinzvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "meet.google.com.hk.reinzvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "teams.live.com.hk.reinzvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "kh.google.com.hk.reinzvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "learn.microsoft.com.hk.reinzvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "classroom.google.com.hk.reinzvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "mapsplatform.google.com.hk.reinzvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "maps.googleapis.com.hk.reinzvpn.filegear-sg.me"
+custom_domain = true
+
 
 
 [vars]
