--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,47 +1,47 @@
-name = "HK" # todo
+name = "HKG" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "hk.reinzvpn.filegear-sg.me"
+pattern = "hkg.reinzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "teams.microsoft.com.hk.reinzvpn.filegear-sg.me"
+pattern = "teams.microsoft.com.hkg.reinzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "meetings.googleapis.com.hk.reinzvpn.filegear-sg.me"
+pattern = "meetings.googleapis.com.hkg.reinzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "zoomcares.zoom.us.hk.reinzvpn.filegear-sg.me"
+pattern = "zoomcares.zoom.us.hkg.reinzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "maps.gstatic.com.hk.reinzvpn.filegear-sg.me"
+pattern = "maps.gstatic.com.hkg.reinzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "edge.skype.com.hk.reinzvpn.filegear-sg.me"
+pattern = "edge.skype.com.hkg.reinzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "meet.google.com.hk.reinzvpn.filegear-sg.me"
+pattern = "meet.google.com.hkg.reinzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "teams.live.com.hk.reinzvpn.filegear-sg.me"
+pattern = "teams.live.com.hkg.reinzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "kh.google.com.hk.reinzvpn.filegear-sg.me"
+pattern = "kh.google.com.hkg.reinzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "learn.microsoft.com.hk.reinzvpn.filegear-sg.me"
+pattern = "learn.microsoft.com.hkg.reinzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "classroom.google.com.hk.reinzvpn.filegear-sg.me"
+pattern = "classroom.google.com.hkg.reinzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "mapsplatform.google.com.hk.reinzvpn.filegear-sg.me"
+pattern = "mapsplatform.google.com.hkg.reinzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "maps.googleapis.com.hk.reinzvpn.filegear-sg.me"
+pattern = "maps.googleapis.com.hkg.reinzvpn.filegear-sg.me"
 custom_domain = true
 
 
