--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,9 +1,39 @@
-name = "cf-worker-ws-dev" # todo
+name = "ID XCL" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
+[[routes]]
+pattern = "idxcl.1lunatic1icepick.my.id"
+custom_domain = true
+[[routes]]
+pattern = "media.fcgk35-1.fna.whatsapp.net.idxcl.1lunatic1icepick.my.id"
+custom_domain = true
+[[routes]]
+pattern = "graph.facebook.com.idxcl.1lunatic1icepick.my.id"
+custom_domain = true
+[[routes]]
+pattern = "driver.gojek.link.idxcl.1lunatic1icepick.my.id"
+custom_domain = true
+[[routes]]
+pattern = "asphalt.gojek.com.idxcl.1lunatic1icepick.my.id"
+custom_domain = true
+[[routes]]
+pattern = "tellafriendreceiver.whatsapp.net.idxcl.1lunatic1icepick.my.id"
+custom_domain = true
+[[routes]]
+pattern = "ava.game.naver.com.idxcl.1lunatic1icepick.my.id"
+custom_domain = true
+[[routes]]
+pattern = "w5.web.whatsapp.com.idxcl.1lunatic1icepick.my.id"
+custom_domain = true
+[[routes]]
+pattern = "v.whatsapp.net.idxcl.1lunatic1icepick.my.id"
+custom_domain = true
+[[routes]]
+pattern = "sogood.linefriends.com.idxcl.1lunatic1icepick.my.id"
+custom_domain = true
 
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
@@ -12,4 +42,4 @@ compatibility_date = "2023-05-26"
 # NODE_ID = "1"
 # API_TOKEN = "example_dev_token"
 # API_HOST = "api.v2board.com"
-UUID = "1b6c1745-992e-4aac-8685-266c090e50ea,89b64978-6244-4bf3-bf64-67ade4ce5c8f,d342d11e-d424-4583-b36e-524ab1f0afa4"
+UUID = "914b5a3d-a423-44a1-91fb-5d3ecfbfadcd"
