--- a/wrangler.toml
+++ b/wrangler.toml
@@ -19,6 +19,9 @@ custom_domain = true
 [[routes]]
 pattern = "care.pmang.game.naver.com.sg1.ffastacy.filegear-sg.me"
 custom_domain = true
+[[routes]]
+pattern = "app-stg.gopay.co.id.sg1.ffastacy.filegear-sg.me"
+custom_domain = true
 
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
