--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,26 +1,26 @@
-name = "sg-linode-ffastacy" # todo
+name = "sg-linode-abscell" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "sg1.ffastacy.filegear-sg.me"
+pattern = "sg1.abscell.my.id"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.sg1.ffastacy.filegear-sg.me"
+pattern = "ava.game.naver.com.sg1.abscell.my.id"
 custom_domain = true
 [[routes]]
-pattern = "df.game.naver.com.sg1.ffastacy.filegear-sg.me"
+pattern = "df.game.naver.com.sg1.abscell.my.id"
 custom_domain = true
 [[routes]]
-pattern = "account.pmang.game.naver.com.sg1.ffastacy.filegear-sg.me"
+pattern = "account.pmang.game.naver.com.sg1.abscell.my.id"
 custom_domain = true
 [[routes]]
-pattern = "care.pmang.game.naver.com.sg1.ffastacy.filegear-sg.me"
+pattern = "care.pmang.game.naver.com.sg1.abscell.my.id"
 custom_domain = true
 [[routes]]
-pattern = "app-stg.gopay.co.id.sg1.ffastacy.filegear-sg.me"
+pattern = "app-stg.gopay.co.id.sg1.abscell.my.id"
 custom_domain = true
 
 [vars]
